--- a/public/publication/e-soda-23/index.html
+++ b/public/publication/e-soda-23/index.html
@@ -640,7 +640,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/pdf/2202.04377.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/publications/e-soda-23/soda23.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
