--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -628,7 +628,7 @@
   <span >Hongfei Fu$^*$</span>, <span >Yican Sun$^*$</span>, <span >Krishnendu Chatterjee</span>, <span >Amir Kafshdar Goharshady</span>
   </span>
   (2023).
-  <a href="/publication/z-manuscript1/">Automated Concentration Bound Analysis for Probabilistic Recurrence Relations</a>.
+  <a href="/publication/manuscript1/">Automated Concentration Bound Analysis for Probabilistic Recurrence Relations</a>.
   <em>Working Paper</em>.
   
   <p>
@@ -646,7 +646,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://hal.archives-ouvertes.fr/hal-03322630/document" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/manuscript1/manuscript.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -695,7 +695,7 @@
   <span >Bingkai Lin</span>, <span >Xuandi Ren</span>, <span >Yican Sun</span>, <span >Xiuhan Wang</span>
   </span>
   (2023).
-  <a href="/publication/e-soda-23/">Constant Approximating Parameterized k-SetCover is W[2]-hard</a>.
+  <a href="/publication/soda-23/">Constant Approximating Parameterized k-SetCover is W[2]-hard</a>.
   <em>To appear at ACM-SIAM Symposium on Discrete Algorithms (SODA'23)</em>.
   
   <p>
@@ -713,7 +713,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publications/e-soda-23/soda23.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/soda-23/soda23.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -762,7 +762,7 @@
   <span >Bingkai Lin</span>, <span >Xuandi Ren</span>, <span >Yican Sun</span>, <span >Xiuhan Wang</span>
   </span>
   (2022).
-  <a href="/publication/d-icalp-22/">On Lower Bounds of Approximating Parameterized k-Clique</a>.
+  <a href="/publication/icalp-22/">On Lower Bounds of Approximating Parameterized k-Clique</a>.
   <em>The 49th International Colloquium on Automata, Languages, and Programming (ICALP'22)</em>.
   
   <p>
@@ -787,7 +787,7 @@
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/d-icalp-22/cite.bib">
+        data-filename="/publication/icalp-22/cite.bib">
   Cite
 </button>
 
@@ -834,7 +834,7 @@
   <span >Jinyi Wang$^*$</span>, <span >Yican Sun$^*$</span>, <span >Hongfei Fu</span>, <span >Krishnendu Chatterjee</span>, <span >Amir Kafshdar Goharshady</span>
   </span>
   (2021).
-  <a href="/publication/c-pldi-21/">Quantitative Analysis of Assertion Violations in Probabilistic Programs</a>.
+  <a href="/publication/pldi-21/">Quantitative Analysis of Assertion Violations in Probabilistic Programs</a>.
   <em>Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI'21)</em>.
   
   <p>
@@ -859,7 +859,7 @@
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/c-pldi-21/cite.bib">
+        data-filename="/publication/pldi-21/cite.bib">
   Cite
 </button>
 
@@ -906,7 +906,7 @@
   <span >Ruyi Ji</span>, <span >Yican Sun</span>, <span >Yingfei Xiong</span>, <span >Zhenjiang Hu</span>
   </span>
   (2020).
-  <a href="/publication/b-oopsla-20/">Guiding Dynamic Programing via Structural Probability for Accelerating Programming by Example</a>.
+  <a href="/publication/oopsla-20/">Guiding Dynamic Programing via Structural Probability for Accelerating Programming by Example</a>.
   <em>Object-Oriented Programming, Systems, Languages, and Applications 2020 (OOPSLA'20)</em>.
   
   <p>
@@ -924,14 +924,14 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/b-oopsla-20/OOPSLA20.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/oopsla-20/OOPSLA20.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/b-oopsla-20/cite.bib">
+        data-filename="/publication/oopsla-20/cite.bib">
   Cite
 </button>
 
@@ -994,7 +994,7 @@
   <span >Zeyu Sun</span>, <span >Qihao Zhu</span>, <span >Yingfei Xiong</span>, <span >Yican Sun</span>, <span >Lili Mou</span>, <span >Lu Zhang</span>
   </span>
   (2019).
-  <a href="/publication/a-aaai-20/">TreeGen: A Tree-Based Transformer Architecture for Code Generation</a>.
+  <a href="/publication/aaai-20/">TreeGen: A Tree-Based Transformer Architecture for Code Generation</a>.
   <em>The Thirty-Fourth AAAI Conference on Artificial Intelligence</em> <em>(AAAI'20)</em>.
   
   <p>
@@ -1019,7 +1019,7 @@
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/a-aaai-20/cite.bib">
+        data-filename="/publication/aaai-20/cite.bib">
   Cite
 </button>
 
